<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="View.CredencialDeAcessoActivity">


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/txt_FinalizacaoCadastro"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtNome"
        android:textColor="@color/colorAzul"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtHintNome"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtEmail"
        android:textColor="@color/colorPreto"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtHintEmail"
        android:inputType="textEmailAddress"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSenhaA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtSenhaA"
        android:textColor="@color/colorPreto"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtHintSenhaA"
        android:inputType="numberPassword"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSenhaB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtSenhaB"
        android:textColor="@color/colorPreto"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editSenhaB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtHintSenhaB"
        android:inputType="numberPassword"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/ckTermo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:onClick="validarTermo"
        android:text="@string/txtckTermo"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCadastrarNovoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/btnCadastrar" />

</androidx.appcompat.widget.LinearLayoutCompat>