<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="View.ClientePessoaJuridicaActivity">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPessoaJuridica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtPessoaJuridica"
        android:textColor="@color/colorAzul"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCnpj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtCnpj"
        android:textColor="@color/colorPreto"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editCnpj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtHintCnpj"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtRazaoSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtRazaoSocial"
        android:textColor="@color/colorPreto"
        android:inputType="number"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editRazaoSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtHintRazaoSocial"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDataAbertura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtDataAbertura"
        android:textColor="@color/colorPreto"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editDataAbertura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="dd/mm/aaaa"
        android:inputType="date"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/cKSimplesNacional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtckSimplesNacional"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cKMei"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/txtckMei"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSalvareConcluirPJ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/btnSalvarEConcluir" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/btnCancelar" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/btnVoltar" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>