<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="View.ClientePessoaFisicaActivity">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPessoaFisica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtPessoaFisica"
        android:textColor="@color/colorAzul"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtCpf"
        android:textColor="@color/colorPreto"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtHintCpf"
        android:inputType="text|number"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPrimeiroNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtNomeCompleto"
        android:textColor="@color/colorPreto"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editNomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtHintNomeCompleto"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSalvareConcluirPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/btnSalvarEConcluir" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/btnCancelar" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/btnVoltar" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>